Start linked list notes

--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -1064,8 +1064,382 @@
    "id": "18a3b4c3",
    "metadata": {},
    "source": [
-    "## 8. Linked Lists"
+    "## 8. Linked Lists\n",
+    "\n",
+    "A linked list represents a list of items as **non-contiguous** blocks of memory.\n",
+    "\n",
+    "It is a list of items, similar to an array. But an array occupies a continuous block of memory.\n",
+    "\n",
+    "In a linked list, each element is contained in a **node** that can be in scattered positions in memory. The node contains the data element and a \"link\" which is a pointer to the memory address of the next element.\n",
+    "\n",
+    "This makes the linked list more memory efficient than an array, at the expense of longer look up times, since all elements must be traversed.\n",
+    "\n",
+    "A node contains two pieces of information:\n",
+    "\n",
+    "Data | Link\n",
+    "-----|-----\n",
+    "\"a\"  | 1666\n",
+    "\n",
+    "These nodes can then be linked together in a list... a linked list!\n",
+    "\n",
+    "```{mermaid}\n",
+    "flowchart LR\n",
+    "\n",
+    "  A(\"'a'|1666\") --> B(\"'b'|1984\") --> C(\"'c'|1066\") --> D(\"...\") --> E(\"'z'|null\")\n",
+    "\n",
+    "```\n",
+    "\n",
+    "The link of the last node is null to indicate the end of the list.\n",
+    "\n",
+    "\n",
+    "### 8.1. Implementating a Node\n",
+    "\n",
+    "We first need a node data structre, which will hold our data and a link to the next node.\n",
+    "\n",
+    "We'll point to the next node itself, rather than its memory address. This still has the same effect as nodes are scattered throughout different memory locations."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "3bcf4f77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Node:\n",
+    "\n",
+    "    def __init__(self, data, link=None):\n",
+    "        self.data = data\n",
+    "        self.link = link\n",
+    "    \n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"Data: {self.data}\\tLink: \\n{self.link}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f358d6b1",
+   "metadata": {},
+   "source": [
+    "Create some nodes and link them together"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "bbfaf9fa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node1 = Node(\"a\")\n",
+    "node2 = Node(\"b\")\n",
+    "node3 = Node(\"c\")\n",
+    "node4 = Node(\"d\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a029f0de",
+   "metadata": {},
+   "source": [
+    "This is what a single node looks like:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "fb6ae0a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: a\tLink: \n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(node1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d318d01d",
+   "metadata": {},
+   "source": [
+    "Now we link them"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "52a3240c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "node1.link = node2\n",
+    "node2.link = node3\n",
+    "node3.link = node4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "202fd66f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: a\tLink: \n",
+       "Data: b\tLink: \n",
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "node1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ae449b20",
+   "metadata": {},
+   "source": [
+    "### 8.2. Implementing a Linked List\n",
+    "\n",
+    "The linked list simply keeps track of the **head**, i.e. the first node in the list.\n",
+    "\n",
+    "When using linked lists, we only have immediate access to this first node. For any other values, we need to start at the head node and traverse the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "302810b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.head)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "6e66cba0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: a\tLink: \n",
+       "Data: b\tLink: \n",
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll = LinkedList(node1)\n",
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3371fbd8",
+   "metadata": {},
+   "source": [
+    "### 8.3. Reading from a Linked List"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "284ad2c2",
+   "metadata": {},
+   "source": [
+    "We start at the head an traverse the list until we reach the desired index.\n",
+    "\n",
+    "This means they ar $O(N)$ in the worst case."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "f7f8f365",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.head)\n",
+    "    \n",
+    "    def read(self, index):\n",
+    "        \"\"\"Read the node at the given index.\"\"\"\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        while (index > current_idx):\n",
+    "            if current_node.link is None:\n",
+    "                # The index does not exist in the linked list, we have reached the end\n",
+    "                return None\n",
+    "            \n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1          \n",
+    "\n",
+    "        return current_node\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "8fdee59c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll = LinkedList(node1)\n",
+    "ll.read(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "id": "0f7f6988",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ll.read(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ead2bea",
+   "metadata": {},
+   "source": [
+    "### 8.4. Searching a Linked List\n",
+    "\n",
+    "To search for a value, again we have to traverse the whole list.\n",
+    "\n",
+    "This means the worst case complexity is $O(N)$.\n",
+    "\n",
+    "The mechanics of searching are the same as reading - we traverse the graph. The difference is we keep going until we find the value or reach the end of the list, rather than stopping at a predetermined index with `read`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "2f9bf74e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.head)\n",
+    "    \n",
+    "    def read(self, index):\n",
+    "        \"\"\"Read the node at the given index.\"\"\"\n",
+    "        # Start at the head\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        # Traverse the list until we find the desired index\n",
+    "        while (index > current_idx):\n",
+    "            if current_node.link is None:\n",
+    "                # The index does not exist in the linked list, we have reached the end\n",
+    "                return None\n",
+    "            \n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1          \n",
+    "\n",
+    "        return current_node\n",
+    "    \n",
+    "    def search(self, value):\n",
+    "        \"\"\"Find the index of the given value.\"\"\"\n",
+    "        # Start at the head\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        # Loop until we reach the None value which denotes the end of the list\n",
+    "        while current_node:\n",
+    "            if current_node.data == value:\n",
+    "                # We've found our target value\n",
+    "                return current_idx\n",
+    "            # Try the next node\n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1\n",
+    "\n",
+    "        # We have traversed the whole list without finding a matching value\n",
+    "        return None\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "799e4c57",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll = LinkedList(node1)\n",
+    "ll.search('c')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19e2fec8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
