Linked list notes

--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -1070,9 +1070,23 @@
     "\n",
     "It is a list of items, similar to an array. But an array occupies a continuous block of memory.\n",
     "\n",
+    "\n",
+    "| Operation | Complexity (Worst) | Complexity (Best)*       |\n",
+    "|-----------|--------------------|--------------------------|\n",
+    "| Read      | O(N)               | O(1)                     |\n",
+    "| Search    | O(N)               | O(1)                     |\n",
+    "| Insertion | O(N)               | O(1)                     |\n",
+    "| Deletion  | O(N)               | O(1)                     |\n",
+    "\n",
+    "The best case corresponds to operating on the head node.\n",
+    "\n",
     "In a linked list, each element is contained in a **node** that can be in scattered positions in memory. The node contains the data element and a \"link\" which is a pointer to the memory address of the next element.\n",
     "\n",
-    "This makes the linked list more memory efficient than an array, at the expense of longer look up times, since all elements must be traversed.\n",
+    "Benefits of a linked list over an array:\n",
+    "\n",
+    "1. Memory efficient: we don't need a continuous block of memory\n",
+    "2. $O(1)$ inserts and deletes from the beginning of the list\n",
+    "3. Useful when we want to traverse through a data structure while making inserts and deletes, because we do not have to shift the entire data structure each time as we would have to with an array\n",
     "\n",
     "A node contains two pieces of information:\n",
     "\n",
@@ -1094,14 +1108,14 @@
     "\n",
     "### 8.1. Implementating a Node\n",
     "\n",
-    "We first need a node data structre, which will hold our data and a link to the next node.\n",
+    "We first need a node data structure, which will hold our data and a link to the next node.\n",
     "\n",
     "We'll point to the next node itself, rather than its memory address. This still has the same effect as nodes are scattered throughout different memory locations."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 115,
    "id": "3bcf4f77",
    "metadata": {},
    "outputs": [],
@@ -1126,7 +1140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 116,
    "id": "bbfaf9fa",
    "metadata": {},
    "outputs": [],
@@ -1147,7 +1161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 117,
    "id": "fb6ae0a8",
    "metadata": {},
    "outputs": [
@@ -1174,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 118,
    "id": "52a3240c",
    "metadata": {},
    "outputs": [],
@@ -1186,7 +1200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 119,
    "id": "202fd66f",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1214,7 @@
        "None"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 120,
    "id": "302810b0",
    "metadata": {},
    "outputs": [],
@@ -1239,7 +1253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 121,
    "id": "6e66cba0",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1267,7 @@
        "None"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1283,7 +1297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 122,
    "id": "f7f8f365",
    "metadata": {},
    "outputs": [],
@@ -1314,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 123,
    "id": "8fdee59c",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1340,7 @@
        "None"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1338,7 +1352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 124,
    "id": "0f7f6988",
    "metadata": {},
    "outputs": [],
@@ -1362,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 125,
    "id": "2f9bf74e",
    "metadata": {},
    "outputs": [],
@@ -1413,7 +1427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 126,
    "id": "799e4c57",
    "metadata": {},
    "outputs": [
@@ -1423,7 +1437,7 @@
        "2"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1434,11 +1448,448 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "19e2fec8",
    "metadata": {},
+   "source": [
+    "### 8.5. Inserting into a Linked List\n",
+    "\n",
+    "Inserting a node into a linked list **where we already have the current node** is an $O(1)$ operation. \n",
+    "\n",
+    "1. **Point to the next node**. `new_node.link = current_node.link`\n",
+    "2. **Link from the previous node**. `current_node.link = new_node`\n",
+    "\n",
+    "With a linked list, we only have the head node, so we can insert at the start in $O(1)$ time. \n",
+    "\n",
+    "But to insert at any other point, we have to traverse there first (an $O(N)$ operation) and then do the insert.\n",
+    "\n",
+    "This is the key point of linked lists: insertion at the beginning is $O(1)$ but at the end is $O(N)$. This is the opposite of arrays, meaning linked lists are useful in cases where insertions are mostly at the beginning.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "id": "65124fd0",
+   "metadata": {},
    "outputs": [],
+   "source": [
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.head)\n",
+    "    \n",
+    "    def read(self, index):\n",
+    "        \"\"\"Read the node at the given index.\"\"\"\n",
+    "        # Start at the head\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        # Traverse the list until we find the desired index\n",
+    "        while (index > current_idx):\n",
+    "            if current_node.link is None:\n",
+    "                # The index does not exist in the linked list, we have reached the end\n",
+    "                return None\n",
+    "            \n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1          \n",
+    "\n",
+    "        return current_node\n",
+    "    \n",
+    "    def search(self, value):\n",
+    "        \"\"\"Find the index of the given value.\"\"\"\n",
+    "        # Start at the head\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        # Loop until we reach the None value which denotes the end of the list\n",
+    "        while current_node:\n",
+    "            if current_node.data == value:\n",
+    "                # We've found our target value\n",
+    "                return current_idx\n",
+    "            # Try the next node\n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1\n",
+    "\n",
+    "        # We have traversed the whole list without finding a matching value\n",
+    "        return None\n",
+    "    \n",
+    "\n",
+    "    def insert(self, value, index):\n",
+    "        \"\"\"Insert the value at the given index.\"\"\"\n",
+    "        new_node = Node(value)\n",
+    "\n",
+    "        if index == 0:\n",
+    "            # Link to the old head and update the linked lists head\n",
+    "            new_node.link = self.head\n",
+    "            self.head = new_node\n",
+    "            return\n",
+    "        \n",
+    "        # Traverse the linked list until we find our node\n",
+    "        current_node = self.head\n",
+    "        current_idx = 0\n",
+    "        while current_idx < index - 1:\n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1\n",
+    "\n",
+    "        # Update the links to insert the new node\n",
+    "        new_node.link = current_node.link\n",
+    "        current_node.link = new_node\n",
+    "        return \n",
+    "\n",
+    "\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f2b9727f",
+   "metadata": {},
+   "source": [
+    "Insert a new head of our linked list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "715a663a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: a\tLink: \n",
+       "Data: b\tLink: \n",
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll = LinkedList(node1)\n",
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "0a7d80b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ll.insert('new_head', 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
+   "id": "f718e609",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: new_head\tLink: \n",
+       "Data: a\tLink: \n",
+       "Data: b\tLink: \n",
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 130,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ba4cb3b",
+   "metadata": {},
+   "source": [
+    "Insert in the middle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "id": "ff6f7ba2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ll.insert(\"I'm new here\", 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "edc9b98f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: new_head\tLink: \n",
+       "Data: a\tLink: \n",
+       "Data: b\tLink: \n",
+       "Data: I'm new here\tLink: \n",
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c844b2a",
+   "metadata": {},
+   "source": [
+    "### 8.6. Deleting from a Linked List\n",
+    "\n",
+    "It is quick to delete from the beginning of a linked list for the same reasons as insertion.\n",
+    "\n",
+    "1. Make the previous node point to the next next node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "7dc9f6d2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class LinkedList:\n",
+    "\n",
+    "    def __init__(self, head):\n",
+    "        self.head = head\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return str(self.head)\n",
+    "    \n",
+    "    def read(self, index):\n",
+    "        \"\"\"Read the node at the given index.\"\"\"\n",
+    "        # Start at the head\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        # Traverse the list until we find the desired index\n",
+    "        while (index > current_idx):\n",
+    "            if current_node.link is None:\n",
+    "                # The index does not exist in the linked list, we have reached the end\n",
+    "                return None\n",
+    "            \n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1          \n",
+    "\n",
+    "        return current_node\n",
+    "    \n",
+    "    def search(self, value):\n",
+    "        \"\"\"Find the index of the given value.\"\"\"\n",
+    "        # Start at the head\n",
+    "        current_idx = 0\n",
+    "        current_node = self.head\n",
+    "\n",
+    "        # Loop until we reach the None value which denotes the end of the list\n",
+    "        while current_node:\n",
+    "            if current_node.data == value:\n",
+    "                # We've found our target value\n",
+    "                return current_idx\n",
+    "            # Try the next node\n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1\n",
+    "\n",
+    "        # We have traversed the whole list without finding a matching value\n",
+    "        return None\n",
+    "    \n",
+    "\n",
+    "    def insert(self, value, index):\n",
+    "        \"\"\"Insert the value at the given index.\"\"\"\n",
+    "        new_node = Node(value)\n",
+    "\n",
+    "        if index == 0:\n",
+    "            # Link to the old head and update the linked lists head\n",
+    "            new_node.link = self.head\n",
+    "            self.head = new_node\n",
+    "            return\n",
+    "        \n",
+    "        # Traverse the linked list until we find our node\n",
+    "        current_node = self.head\n",
+    "        current_idx = 0\n",
+    "        while current_idx < index - 1:\n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1\n",
+    "\n",
+    "        # Update the links to insert the new node\n",
+    "        new_node.link = current_node.link\n",
+    "        current_node.link = new_node\n",
+    "        return \n",
+    "    \n",
+    "    def delete(self, index):\n",
+    "        \"\"\"Delete the value at the given index.\"\"\"\n",
+    "        if index == 0:\n",
+    "            # We are deleting the head node, so point at the second node instead\n",
+    "            self.head = self.head.link\n",
+    "            return\n",
+    "    \n",
+    "        # Traverse the linked list until we find our node\n",
+    "        current_node = self.head\n",
+    "        current_idx = 0\n",
+    "        while current_idx < index - 1:\n",
+    "            current_node = current_node.link\n",
+    "            current_idx += 1\n",
+    "\n",
+    "        # Skip the next node (which we are deleting) and point ot its link instead\n",
+    "        current_node.link = current_node.link.link\n",
+    "        return       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "69bb3f4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data: a\tLink: \n",
+       "Data: b\tLink: \n",
+       "Data: I'm new here\tLink: \n",
+       "Data: c\tLink: \n",
+       "Data: d\tLink: \n",
+       "None"
+      ]
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ll = LinkedList(node1)\n",
+    "ll"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81e68fb5",
+   "metadata": {},
+   "source": [
+    "Delete the head node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "72df01e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: b\tLink: \n",
+      "Data: I'm new here\tLink: \n",
+      "Data: c\tLink: \n",
+      "Data: d\tLink: \n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll.delete(0)\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90518193",
+   "metadata": {},
+   "source": [
+    "Delete a middle node"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 138,
+   "id": "71ef1431",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data: b\tLink: \n",
+      "Data: c\tLink: \n",
+      "Data: d\tLink: \n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "ll.delete(1)\n",
+    "print(ll)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47f66916",
+   "metadata": {},
+   "source": [
+    "### 8.7. Doubly Linked Lists\n",
+    "\n",
+    "A doubly linked list is a variant where each node contains pointers to the previous node and the next node.\n",
+    "\n",
+    "Data | Previous | Next\n",
+    "-----|----------|------- \n",
+    "\"a\"  | null     | 1666\n",
+    "\n",
+    "The linked list tracks the head and tail.\n",
+    "\n",
+    "This makes it quicker to read/insert/delete from either the beginning or end. We can also traverse backwards or forwards through the list.\n",
+    "\n",
+    "\n",
+    "```{mermaid}\n",
+    "flowchart LR\n",
+    "\n",
+    "  A(\"'a'|null|1666\") <---> B(\"'b'|1234|1984\") <--> C(\"'c'|1666|1066\") <--> D(\"...\") <--> E(\"'z'|1993|null\")\n",
+    "\n",
+    "```\n",
+    "\n",
+    "\n",
+    "Doubly linked lists are a good data structure to use for queues, since we can insert/delete at either end."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2028aa18",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66c958ab",
+   "metadata": {},
    "source": []
   }
  ],
