Start binary search trees section

--- a/posts/software/data_structures_algos/data_structures/data_structures.ipynb
+++ b/posts/software/data_structures_algos/data_structures/data_structures.ipynb
@@ -1890,6 +1890,191 @@
    "cell_type": "markdown",
    "id": "66c958ab",
    "metadata": {},
+   "source": [
+    "## 9. Binary Search Trees\n",
+    "\n",
+    "We can have some use cases where we want to keep our data sorted. \n",
+    "\n",
+    "Sorting is expensive, $O(N log N)$ at the best of times, so we want to avoid sorting often. Ideally we would keep our data sorted at all times.\n",
+    "An ordered array *could* do the job, but insertions and deletions are slow as we have to shift a chunk over the array every time.\n",
+    "\n",
+    "We want a data structure that:\n",
+    "\n",
+    "1. Maintains order\n",
+    "2. Has fast inserts, deletes and search\n",
+    "\n",
+    "This is where a binary search tree comes in.\n",
+    "\n",
+    "\n",
+    "### 9.1. Trees \n",
+    "\n",
+    "Trees are another node-based data structure when each node can point to multiple other nodes.\n",
+    "\n",
+    "\n",
+    "```{mermaid}\n",
+    "flowchart TD\n",
+    "\n",
+    "\n",
+    "  A(a) --> B(b)\n",
+    "  A(a) --> C(c)\n",
+    "\n",
+    "  B(b) --> D(d)\n",
+    "  B(b) --> E(e)\n",
+    "\n",
+    "  C(c) --> F(f)\n",
+    "```\n",
+    "\n",
+    "- The **root** is the uppermost node.\n",
+    "- `a` is the **parent** of `b` and `c`; `b` and `c` are **children** of `a`.\n",
+    "- The **descendants** of a node are all of its children and its children's children's children etc. The **ancestors** of anode are its parents and its parent's parent's parents etc.\n",
+    "- Each horizontal layer ofthe tree is a **level**.\n",
+    "- A tree is **balanced** if all of its subtrees have the same number of nodes.\n",
+    "\n",
+    "\n",
+    "### 9.2. Binary Search Tree Rules\n",
+    "\n",
+    "A **binary tree** is one in which each node can have at most 2 children.\n",
+    "\n",
+    "A **binary search tree**must abide by the following rules:\n",
+    "\n",
+    "1. Each node can have at most one \"left\" child and one \"right\" child\n",
+    "2. A node's left descendants are all smaller than the node. It's right descendants are all larger.\n",
+    "\n",
+    "\n",
+    "### 9.3. Implementation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "317e252e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TreeNode:\n",
+    "\n",
+    "    def __init__(self, value, left=None, right=None):\n",
+    "        self.value = value\n",
+    "        self.left = left\n",
+    "        self.right = right\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        return f\"TreeNode with value: {self.value}\"\n",
+    "\n",
+    "\n",
+    "class Tree: \n",
+    "\n",
+    "    def __init__(self, root_node):\n",
+    "        self.root_node = root_node\n",
+    "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"Tree with root: {self.root_node}\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "id": "4dc246e2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree_node2 = TreeNode('b')\n",
+    "tree_node3 = TreeNode('c')\n",
+    "tree_node1 = TreeNode('a', tree_node2, tree_node3)\n",
+    "\n",
+    "tree = Tree(tree_node1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "1bcf8794",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TreeNode with value: a"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_node1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "id": "e541475f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TreeNode with value: b"
+      ]
+     },
+     "execution_count": 164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_node1.left"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "57555ea9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TreeNode with value: c"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree_node1.right"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "id": "6327fb3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Tree with root: TreeNode with value: a"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b04c3cc",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
